FullQa New/src/LeanData/objects/Routing_Graph__c.object
<CustomObject>
    <fields>
        <fullName>Graph_JSON_2__c</fullName>
        <label>Graph_JSON_2__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_JSON_3__c</fullName>
        <label>Graph_JSON_3__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_JSON_4__c</fullName>
        <label>Graph_JSON_4__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_JSON__c</fullName>
        <label>Graph_JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_Version__c</fullName>
        <label>Graph Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Saved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Saved By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User</relationshipLabel>
        <relationshipName>SavedUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Saved_Date__c</fullName>
        <label>Last Saved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Image__c</fullName>
        <label>Preview Image</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Routing Graph</label>
    <nameField>
        <label>Routing_Graph Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Graphs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>